fix jdk11 jvm option for server